src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Exp
Rule 1     Exp -> HELP
Rule 2     Exp -> ID EQUAL JSON COLON LC RC SEMICOLON
Rule 3     Exp -> ID EQUAL ID SEMICOLON
Rule 4     Exp -> ID EQUAL INT SEMICOLON
Rule 5     Exp -> ID EQUAL JSON COLON LC Inside RC SEMICOLON
Rule 6     Inside -> InsideRec
Rule 7     Inside -> STRING COLON STRING
Rule 8     InsideRec -> Inside COMMA Inside
Rule 9     Exp -> ID SEMICOLON
Rule 10    Exp -> ID EQUAL CREATESERVER LP PORT EQUAL INT RP SEMICOLON
Rule 11    Exp -> ID EQUAL CREATESERVER LP RP SEMICOLON
Rule 12    Exp -> ID COLON START SEMICOLON
Rule 13    Exp -> ID EQUAL HTTPGET LP URL EQUAL STRING RP SEMICOLON
Rule 14    Exp -> HTTPGET LP URL EQUAL STRING RP SEMICOLON
Rule 15    Exp -> ID EQUAL ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON
Rule 16    Exp -> ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON
Rule 17    Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
Rule 18    Exp -> ID EQUAL ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON
Rule 19    Exp -> ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
Rule 20    Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
Rule 21    Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
Rule 22    Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON

Terminals, with rules where they appear

BODY                 : 16 18 20
COLON                : 2 5 7 12 15 16 17 18 19 20 20 21 21 22
COMMA                : 8
CREATEDATA           : 17 19 21
CREATESERVER         : 10 11
EQUAL                : 2 3 4 5 10 10 11 13 13 14 15 15 16 17 17 18 18 19 20 20 21 21 22
HELP                 : 1
HTTPGET              : 13 14
ID                   : 2 3 3 4 5 9 10 11 12 13 15 15 16 16 17 17 17 18 18 18 19 19 20 20 21 21 22
INT                  : 4 10
JSON                 : 2 5
LC                   : 2 5
LP                   : 10 11 13 14 15 16 17 18 19 20 20 21 21 22
OBJECT               : 17 19 21
PORT                 : 10
RC                   : 2 5
READDATA             : 16 18 20
RP                   : 10 11 13 14 15 16 17 18 19 20 20 21 21 22
SEMICOLON            : 2 3 4 5 9 10 11 12 13 14 15 16 17 18 19 20 21 22
SETROUTES            : 15 20 21 22
START                : 12
STRING               : 7 7 13 14 15 20 21 22
URL                  : 13 14 15 20 21 22
error                : 

Nonterminals, with rules where they appear

Exp                  : 0
Inside               : 5 8 8
InsideRec            : 6

Parsing method: LALR

state 0

    (0) S' -> . Exp
    (1) Exp -> . HELP
    (2) Exp -> . ID EQUAL JSON COLON LC RC SEMICOLON
    (3) Exp -> . ID EQUAL ID SEMICOLON
    (4) Exp -> . ID EQUAL INT SEMICOLON
    (5) Exp -> . ID EQUAL JSON COLON LC Inside RC SEMICOLON
    (9) Exp -> . ID SEMICOLON
    (10) Exp -> . ID EQUAL CREATESERVER LP PORT EQUAL INT RP SEMICOLON
    (11) Exp -> . ID EQUAL CREATESERVER LP RP SEMICOLON
    (12) Exp -> . ID COLON START SEMICOLON
    (13) Exp -> . ID EQUAL HTTPGET LP URL EQUAL STRING RP SEMICOLON
    (14) Exp -> . HTTPGET LP URL EQUAL STRING RP SEMICOLON
    (15) Exp -> . ID EQUAL ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON
    (16) Exp -> . ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (17) Exp -> . ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (18) Exp -> . ID EQUAL ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (19) Exp -> . ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (20) Exp -> . ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> . ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> . ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON

    HELP            shift and go to state 1
    ID              shift and go to state 4
    HTTPGET         shift and go to state 2

    Exp                            shift and go to state 3

state 1

    (1) Exp -> HELP .

    $end            reduce using rule 1 (Exp -> HELP .)


state 2

    (14) Exp -> HTTPGET . LP URL EQUAL STRING RP SEMICOLON

    LP              shift and go to state 5


state 3

    (0) S' -> Exp .



state 4

    (2) Exp -> ID . EQUAL JSON COLON LC RC SEMICOLON
    (3) Exp -> ID . EQUAL ID SEMICOLON
    (4) Exp -> ID . EQUAL INT SEMICOLON
    (5) Exp -> ID . EQUAL JSON COLON LC Inside RC SEMICOLON
    (9) Exp -> ID . SEMICOLON
    (10) Exp -> ID . EQUAL CREATESERVER LP PORT EQUAL INT RP SEMICOLON
    (11) Exp -> ID . EQUAL CREATESERVER LP RP SEMICOLON
    (12) Exp -> ID . COLON START SEMICOLON
    (13) Exp -> ID . EQUAL HTTPGET LP URL EQUAL STRING RP SEMICOLON
    (15) Exp -> ID . EQUAL ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON
    (16) Exp -> ID . COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (17) Exp -> ID . EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (18) Exp -> ID . EQUAL ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (19) Exp -> ID . COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (20) Exp -> ID . COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID . COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID . COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON

    EQUAL           shift and go to state 6
    SEMICOLON       shift and go to state 7
    COLON           shift and go to state 8


state 5

    (14) Exp -> HTTPGET LP . URL EQUAL STRING RP SEMICOLON

    URL             shift and go to state 9


state 6

    (2) Exp -> ID EQUAL . JSON COLON LC RC SEMICOLON
    (3) Exp -> ID EQUAL . ID SEMICOLON
    (4) Exp -> ID EQUAL . INT SEMICOLON
    (5) Exp -> ID EQUAL . JSON COLON LC Inside RC SEMICOLON
    (10) Exp -> ID EQUAL . CREATESERVER LP PORT EQUAL INT RP SEMICOLON
    (11) Exp -> ID EQUAL . CREATESERVER LP RP SEMICOLON
    (13) Exp -> ID EQUAL . HTTPGET LP URL EQUAL STRING RP SEMICOLON
    (15) Exp -> ID EQUAL . ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON
    (17) Exp -> ID EQUAL . ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (18) Exp -> ID EQUAL . ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON

    JSON            shift and go to state 13
    ID              shift and go to state 14
    INT             shift and go to state 11
    CREATESERVER    shift and go to state 12
    HTTPGET         shift and go to state 10


state 7

    (9) Exp -> ID SEMICOLON .

    $end            reduce using rule 9 (Exp -> ID SEMICOLON .)


state 8

    (12) Exp -> ID COLON . START SEMICOLON
    (16) Exp -> ID COLON . READDATA LP BODY EQUAL ID RP SEMICOLON
    (19) Exp -> ID COLON . CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (20) Exp -> ID COLON . SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON . SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON . SETROUTES LP URL EQUAL STRING RP SEMICOLON

    START           shift and go to state 17
    READDATA        shift and go to state 15
    CREATEDATA      shift and go to state 16
    SETROUTES       shift and go to state 18


state 9

    (14) Exp -> HTTPGET LP URL . EQUAL STRING RP SEMICOLON

    EQUAL           shift and go to state 19


state 10

    (13) Exp -> ID EQUAL HTTPGET . LP URL EQUAL STRING RP SEMICOLON

    LP              shift and go to state 20


state 11

    (4) Exp -> ID EQUAL INT . SEMICOLON

    SEMICOLON       shift and go to state 21


state 12

    (10) Exp -> ID EQUAL CREATESERVER . LP PORT EQUAL INT RP SEMICOLON
    (11) Exp -> ID EQUAL CREATESERVER . LP RP SEMICOLON

    LP              shift and go to state 22


state 13

    (2) Exp -> ID EQUAL JSON . COLON LC RC SEMICOLON
    (5) Exp -> ID EQUAL JSON . COLON LC Inside RC SEMICOLON

    COLON           shift and go to state 23


state 14

    (3) Exp -> ID EQUAL ID . SEMICOLON
    (15) Exp -> ID EQUAL ID . COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON
    (17) Exp -> ID EQUAL ID . COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (18) Exp -> ID EQUAL ID . COLON READDATA LP BODY EQUAL ID RP SEMICOLON

    SEMICOLON       shift and go to state 24
    COLON           shift and go to state 25


state 15

    (16) Exp -> ID COLON READDATA . LP BODY EQUAL ID RP SEMICOLON

    LP              shift and go to state 26


state 16

    (19) Exp -> ID COLON CREATEDATA . LP OBJECT EQUAL ID RP SEMICOLON

    LP              shift and go to state 27


state 17

    (12) Exp -> ID COLON START . SEMICOLON

    SEMICOLON       shift and go to state 28


state 18

    (20) Exp -> ID COLON SETROUTES . LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES . LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON SETROUTES . LP URL EQUAL STRING RP SEMICOLON

    LP              shift and go to state 29


state 19

    (14) Exp -> HTTPGET LP URL EQUAL . STRING RP SEMICOLON

    STRING          shift and go to state 30


state 20

    (13) Exp -> ID EQUAL HTTPGET LP . URL EQUAL STRING RP SEMICOLON

    URL             shift and go to state 31


state 21

    (4) Exp -> ID EQUAL INT SEMICOLON .

    $end            reduce using rule 4 (Exp -> ID EQUAL INT SEMICOLON .)


state 22

    (10) Exp -> ID EQUAL CREATESERVER LP . PORT EQUAL INT RP SEMICOLON
    (11) Exp -> ID EQUAL CREATESERVER LP . RP SEMICOLON

    PORT            shift and go to state 33
    RP              shift and go to state 32


state 23

    (2) Exp -> ID EQUAL JSON COLON . LC RC SEMICOLON
    (5) Exp -> ID EQUAL JSON COLON . LC Inside RC SEMICOLON

    LC              shift and go to state 34


state 24

    (3) Exp -> ID EQUAL ID SEMICOLON .

    $end            reduce using rule 3 (Exp -> ID EQUAL ID SEMICOLON .)


state 25

    (15) Exp -> ID EQUAL ID COLON . SETROUTES LP URL EQUAL STRING RP SEMICOLON
    (17) Exp -> ID EQUAL ID COLON . CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (18) Exp -> ID EQUAL ID COLON . READDATA LP BODY EQUAL ID RP SEMICOLON

    SETROUTES       shift and go to state 37
    CREATEDATA      shift and go to state 36
    READDATA        shift and go to state 35


state 26

    (16) Exp -> ID COLON READDATA LP . BODY EQUAL ID RP SEMICOLON

    BODY            shift and go to state 38


state 27

    (19) Exp -> ID COLON CREATEDATA LP . OBJECT EQUAL ID RP SEMICOLON

    OBJECT          shift and go to state 39


state 28

    (12) Exp -> ID COLON START SEMICOLON .

    $end            reduce using rule 12 (Exp -> ID COLON START SEMICOLON .)


state 29

    (20) Exp -> ID COLON SETROUTES LP . URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES LP . URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON SETROUTES LP . URL EQUAL STRING RP SEMICOLON

    URL             shift and go to state 40


state 30

    (14) Exp -> HTTPGET LP URL EQUAL STRING . RP SEMICOLON

    RP              shift and go to state 41


state 31

    (13) Exp -> ID EQUAL HTTPGET LP URL . EQUAL STRING RP SEMICOLON

    EQUAL           shift and go to state 42


state 32

    (11) Exp -> ID EQUAL CREATESERVER LP RP . SEMICOLON

    SEMICOLON       shift and go to state 43


state 33

    (10) Exp -> ID EQUAL CREATESERVER LP PORT . EQUAL INT RP SEMICOLON

    EQUAL           shift and go to state 44


state 34

    (2) Exp -> ID EQUAL JSON COLON LC . RC SEMICOLON
    (5) Exp -> ID EQUAL JSON COLON LC . Inside RC SEMICOLON
    (6) Inside -> . InsideRec
    (7) Inside -> . STRING COLON STRING
    (8) InsideRec -> . Inside COMMA Inside

    RC              shift and go to state 46
    STRING          shift and go to state 47

    Inside                         shift and go to state 45
    InsideRec                      shift and go to state 48

state 35

    (18) Exp -> ID EQUAL ID COLON READDATA . LP BODY EQUAL ID RP SEMICOLON

    LP              shift and go to state 49


state 36

    (17) Exp -> ID EQUAL ID COLON CREATEDATA . LP OBJECT EQUAL ID RP SEMICOLON

    LP              shift and go to state 50


state 37

    (15) Exp -> ID EQUAL ID COLON SETROUTES . LP URL EQUAL STRING RP SEMICOLON

    LP              shift and go to state 51


state 38

    (16) Exp -> ID COLON READDATA LP BODY . EQUAL ID RP SEMICOLON

    EQUAL           shift and go to state 52


state 39

    (19) Exp -> ID COLON CREATEDATA LP OBJECT . EQUAL ID RP SEMICOLON

    EQUAL           shift and go to state 53


state 40

    (20) Exp -> ID COLON SETROUTES LP URL . EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES LP URL . EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON SETROUTES LP URL . EQUAL STRING RP SEMICOLON

    EQUAL           shift and go to state 54


state 41

    (14) Exp -> HTTPGET LP URL EQUAL STRING RP . SEMICOLON

    SEMICOLON       shift and go to state 55


state 42

    (13) Exp -> ID EQUAL HTTPGET LP URL EQUAL . STRING RP SEMICOLON

    STRING          shift and go to state 56


state 43

    (11) Exp -> ID EQUAL CREATESERVER LP RP SEMICOLON .

    $end            reduce using rule 11 (Exp -> ID EQUAL CREATESERVER LP RP SEMICOLON .)


state 44

    (10) Exp -> ID EQUAL CREATESERVER LP PORT EQUAL . INT RP SEMICOLON

    INT             shift and go to state 57


state 45

    (5) Exp -> ID EQUAL JSON COLON LC Inside . RC SEMICOLON
    (8) InsideRec -> Inside . COMMA Inside

    RC              shift and go to state 58
    COMMA           shift and go to state 59


state 46

    (2) Exp -> ID EQUAL JSON COLON LC RC . SEMICOLON

    SEMICOLON       shift and go to state 60


state 47

    (7) Inside -> STRING . COLON STRING

    COLON           shift and go to state 61


state 48

    (6) Inside -> InsideRec .

    COMMA           reduce using rule 6 (Inside -> InsideRec .)
    RC              reduce using rule 6 (Inside -> InsideRec .)


state 49

    (18) Exp -> ID EQUAL ID COLON READDATA LP . BODY EQUAL ID RP SEMICOLON

    BODY            shift and go to state 62


state 50

    (17) Exp -> ID EQUAL ID COLON CREATEDATA LP . OBJECT EQUAL ID RP SEMICOLON

    OBJECT          shift and go to state 63


state 51

    (15) Exp -> ID EQUAL ID COLON SETROUTES LP . URL EQUAL STRING RP SEMICOLON

    URL             shift and go to state 64


state 52

    (16) Exp -> ID COLON READDATA LP BODY EQUAL . ID RP SEMICOLON

    ID              shift and go to state 65


state 53

    (19) Exp -> ID COLON CREATEDATA LP OBJECT EQUAL . ID RP SEMICOLON

    ID              shift and go to state 66


state 54

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL . STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES LP URL EQUAL . STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON SETROUTES LP URL EQUAL . STRING RP SEMICOLON

    STRING          shift and go to state 67


state 55

    (14) Exp -> HTTPGET LP URL EQUAL STRING RP SEMICOLON .

    $end            reduce using rule 14 (Exp -> HTTPGET LP URL EQUAL STRING RP SEMICOLON .)


state 56

    (13) Exp -> ID EQUAL HTTPGET LP URL EQUAL STRING . RP SEMICOLON

    RP              shift and go to state 68


state 57

    (10) Exp -> ID EQUAL CREATESERVER LP PORT EQUAL INT . RP SEMICOLON

    RP              shift and go to state 69


state 58

    (5) Exp -> ID EQUAL JSON COLON LC Inside RC . SEMICOLON

    SEMICOLON       shift and go to state 70


state 59

    (8) InsideRec -> Inside COMMA . Inside
    (6) Inside -> . InsideRec
    (7) Inside -> . STRING COLON STRING
    (8) InsideRec -> . Inside COMMA Inside

    STRING          shift and go to state 47

    Inside                         shift and go to state 71
    InsideRec                      shift and go to state 48

state 60

    (2) Exp -> ID EQUAL JSON COLON LC RC SEMICOLON .

    $end            reduce using rule 2 (Exp -> ID EQUAL JSON COLON LC RC SEMICOLON .)


state 61

    (7) Inside -> STRING COLON . STRING

    STRING          shift and go to state 72


state 62

    (18) Exp -> ID EQUAL ID COLON READDATA LP BODY . EQUAL ID RP SEMICOLON

    EQUAL           shift and go to state 73


state 63

    (17) Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT . EQUAL ID RP SEMICOLON

    EQUAL           shift and go to state 74


state 64

    (15) Exp -> ID EQUAL ID COLON SETROUTES LP URL . EQUAL STRING RP SEMICOLON

    EQUAL           shift and go to state 75


state 65

    (16) Exp -> ID COLON READDATA LP BODY EQUAL ID . RP SEMICOLON

    RP              shift and go to state 76


state 66

    (19) Exp -> ID COLON CREATEDATA LP OBJECT EQUAL ID . RP SEMICOLON

    RP              shift and go to state 77


state 67

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING . RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING . RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON SETROUTES LP URL EQUAL STRING . RP SEMICOLON

    RP              shift and go to state 78


state 68

    (13) Exp -> ID EQUAL HTTPGET LP URL EQUAL STRING RP . SEMICOLON

    SEMICOLON       shift and go to state 79


state 69

    (10) Exp -> ID EQUAL CREATESERVER LP PORT EQUAL INT RP . SEMICOLON

    SEMICOLON       shift and go to state 80


state 70

    (5) Exp -> ID EQUAL JSON COLON LC Inside RC SEMICOLON .

    $end            reduce using rule 5 (Exp -> ID EQUAL JSON COLON LC Inside RC SEMICOLON .)


state 71

    (8) InsideRec -> Inside COMMA Inside .
    (8) InsideRec -> Inside . COMMA Inside

  ! shift/reduce conflict for COMMA resolved as shift
    RC              reduce using rule 8 (InsideRec -> Inside COMMA Inside .)
    COMMA           shift and go to state 59

  ! COMMA           [ reduce using rule 8 (InsideRec -> Inside COMMA Inside .) ]


state 72

    (7) Inside -> STRING COLON STRING .

    COMMA           reduce using rule 7 (Inside -> STRING COLON STRING .)
    RC              reduce using rule 7 (Inside -> STRING COLON STRING .)


state 73

    (18) Exp -> ID EQUAL ID COLON READDATA LP BODY EQUAL . ID RP SEMICOLON

    ID              shift and go to state 81


state 74

    (17) Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL . ID RP SEMICOLON

    ID              shift and go to state 82


state 75

    (15) Exp -> ID EQUAL ID COLON SETROUTES LP URL EQUAL . STRING RP SEMICOLON

    STRING          shift and go to state 83


state 76

    (16) Exp -> ID COLON READDATA LP BODY EQUAL ID RP . SEMICOLON

    SEMICOLON       shift and go to state 84


state 77

    (19) Exp -> ID COLON CREATEDATA LP OBJECT EQUAL ID RP . SEMICOLON

    SEMICOLON       shift and go to state 85


state 78

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP . COLON READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP . COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON
    (22) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP . SEMICOLON

    COLON           shift and go to state 87
    SEMICOLON       shift and go to state 86


state 79

    (13) Exp -> ID EQUAL HTTPGET LP URL EQUAL STRING RP SEMICOLON .

    $end            reduce using rule 13 (Exp -> ID EQUAL HTTPGET LP URL EQUAL STRING RP SEMICOLON .)


state 80

    (10) Exp -> ID EQUAL CREATESERVER LP PORT EQUAL INT RP SEMICOLON .

    $end            reduce using rule 10 (Exp -> ID EQUAL CREATESERVER LP PORT EQUAL INT RP SEMICOLON .)


state 81

    (18) Exp -> ID EQUAL ID COLON READDATA LP BODY EQUAL ID . RP SEMICOLON

    RP              shift and go to state 88


state 82

    (17) Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID . RP SEMICOLON

    RP              shift and go to state 89


state 83

    (15) Exp -> ID EQUAL ID COLON SETROUTES LP URL EQUAL STRING . RP SEMICOLON

    RP              shift and go to state 90


state 84

    (16) Exp -> ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON .

    $end            reduce using rule 16 (Exp -> ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON .)


state 85

    (19) Exp -> ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON .

    $end            reduce using rule 19 (Exp -> ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON .)


state 86

    (22) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON .

    $end            reduce using rule 22 (Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON .)


state 87

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON . READDATA LP BODY EQUAL ID RP SEMICOLON
    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON . CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON

    READDATA        shift and go to state 91
    CREATEDATA      shift and go to state 92


state 88

    (18) Exp -> ID EQUAL ID COLON READDATA LP BODY EQUAL ID RP . SEMICOLON

    SEMICOLON       shift and go to state 93


state 89

    (17) Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID RP . SEMICOLON

    SEMICOLON       shift and go to state 94


state 90

    (15) Exp -> ID EQUAL ID COLON SETROUTES LP URL EQUAL STRING RP . SEMICOLON

    SEMICOLON       shift and go to state 95


state 91

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA . LP BODY EQUAL ID RP SEMICOLON

    LP              shift and go to state 96


state 92

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA . LP OBJECT EQUAL ID RP SEMICOLON

    LP              shift and go to state 97


state 93

    (18) Exp -> ID EQUAL ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON .

    $end            reduce using rule 18 (Exp -> ID EQUAL ID COLON READDATA LP BODY EQUAL ID RP SEMICOLON .)


state 94

    (17) Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON .

    $end            reduce using rule 17 (Exp -> ID EQUAL ID COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON .)


state 95

    (15) Exp -> ID EQUAL ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON .

    $end            reduce using rule 15 (Exp -> ID EQUAL ID COLON SETROUTES LP URL EQUAL STRING RP SEMICOLON .)


state 96

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP . BODY EQUAL ID RP SEMICOLON

    BODY            shift and go to state 98


state 97

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP . OBJECT EQUAL ID RP SEMICOLON

    OBJECT          shift and go to state 99


state 98

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY . EQUAL ID RP SEMICOLON

    EQUAL           shift and go to state 100


state 99

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT . EQUAL ID RP SEMICOLON

    EQUAL           shift and go to state 101


state 100

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL . ID RP SEMICOLON

    ID              shift and go to state 102


state 101

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL . ID RP SEMICOLON

    ID              shift and go to state 103


state 102

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID . RP SEMICOLON

    RP              shift and go to state 104


state 103

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID . RP SEMICOLON

    RP              shift and go to state 105


state 104

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP . SEMICOLON

    SEMICOLON       shift and go to state 106


state 105

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP . SEMICOLON

    SEMICOLON       shift and go to state 107


state 106

    (20) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON .

    $end            reduce using rule 20 (Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON READDATA LP BODY EQUAL ID RP SEMICOLON .)


state 107

    (21) Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON .

    $end            reduce using rule 21 (Exp -> ID COLON SETROUTES LP URL EQUAL STRING RP COLON CREATEDATA LP OBJECT EQUAL ID RP SEMICOLON .)

WARNING: 
WARNING: Conflicts:
WARNING: 
WARNING: shift/reduce conflict for COMMA in state 71 resolved as shift
